--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: skaffold-demo
+  name: {{ .Values.name }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -10,4 +10,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: skaffold-demo
+    app: {{ .Values.name }}
