--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
        {{- toYaml . | nindent 8 }}
      {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ .Values.name }}
           image: {{ .Values.image }}
           ports:
             - name: http
