--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -34,14 +34,16 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
           resources:
             requests:
-              cpu: "50m"
-              memory: "32Mi"
+              cpu: "500m"
+              memory: "512Mi"
             limits:
-              cpu: "100m"
-              memory: "64Mi"
+              cpu: "1000m"
+              memory: "1024Mi"
